--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.7.1",
 		"multer": "^1.4.5-lts.1",
-		"nodemon": "^3.1.7",
 		"socket.io": "^4.8.0",
 		"validator": "^13.12.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.10"
 	}
 }
